Changed css for hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,5 +57,8 @@ footer a {
 }
 section {
     padding: 60px;
+}
+.hero {
     background-image: url("../images/hero-bg.jpg");
+    height: 600px;
 }
