--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,4 +61,6 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
+    background-size: cover;
+    background-position: center;
 }
